# csse4011-morpheus-green

./: .gitignore  README.md
TEST/: CMakeLists.txt  prj.conf
TEST/src/: board.c  board.h  main.c  mesh.c  mesh.h
argon/: CMakeLists.txt  Kconfig  README.md  prj.conf
argon/src/: board.c  board.h  main.c  mesh.c  mesh.h  scu_sensors.c  scu_sensors.h  sen5x_i2c.h  sensirion_common.h  sensirion_i2c_hal.c  sensirion_i2c_hal.h
base/: CMakeLists.txt  README.md  flash.sh  prj.conf
base/src/: board.c  board.h  cmd.c  main.c  mesh.c  mesh.h
mesh/: CMakeLists.txt  prj.conf
mesh/src/: main.c
mesh_node/: CMakeLists.txt  prj.conf  shell.conf
mesh_prov/: CMakeLists.txt  prj.conf
mesh_prov/src/: main.c
mesh_sample/: CMakeLists.txt  conf_file.conf  prj.conf
mesh_sample/src/: ble_mesh.c  ble_mesh.h  device_composition.c  main.c
mesh_shell/: CMakeLists.txt  prj.conf
mesh_shell/src/: main.c
milestone/: equipment.md  overview.md  progress.md  roles.md
node_base/: CMakeLists.txt  prj.conf
node_base/src/: main.c
old/: CMakeLists.txt  conf_file.conf
old/src/: board.c  board.h  main.c
oslib/led_drivers/: led_driver.c  led_driver.h
project/argon/: prj.conf
project/base/: CMakeLists.txt
project/mobile/: Kconfig  prj.conf
project/sen54/: CMakeLists.txt  prj.conf
project/sen54/src/: main.c
python/: devices.csv  listener.py  ml.py  nodes.csv  query.py  weather_data_short.csv  webscraper.py
test/sen54/: CMakeLists.txt  Kconfig  bt.conf  prj.conf  sensirion_i2c_hal.c
test/sen54/src/: main (copy).c  main.c
test_node/: CMakeLists.txt  segger_rtt.conf
thingy/: CMakeLists.txt  README.md  prj.conf  segger.sh
thingy_shell/: CMakeLists.txt  prj.conf
(+36 files in other folders)
